--- a/user/src/main/resources/application.yaml
+++ b/user/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ spring:
     rest:
       uris: http://localhost:8080
   datasource:
-    url: jdbc:mysql://localhost:3306/post?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+    url: jdbc:mysql://localhost:3306/user?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
     username: root
     password: 1234
   jpa:
@@ -15,5 +15,6 @@ spring:
 token:
   secret: ssssssssssssssssssssssssssmmmmmmmmmmmmmmm
   expiration: 600000
+
 
 
