--- a/comment/src/main/resources/application.yaml
+++ b/comment/src/main/resources/application.yaml
@@ -11,6 +11,8 @@ spring:
     hibernate:
       ddl-auto: create
     show-sql: true
+  application:
+    name: comment
 
 token:
   secret: ssssssssssssssssssssssssssmmmmmmmmmmmmmmm
