--- a/user/src/main/resources/application.yaml
+++ b/user/src/main/resources/application.yaml
@@ -12,6 +12,8 @@ spring:
     hibernate:
       ddl-auto: create
     show-sql: true
+  application:
+    name: user
 
 token:
   secret: ssssssssssssssssssssssssssmmmmmmmmmmmmmmm
