--- a/comment/src/main/resources/application.yaml
+++ b/comment/src/main/resources/application.yaml
@@ -14,7 +14,7 @@ spring:
   application:
     name: comment
 
-token:
+jwt:
   secret: ssssssssssssssssssssssssssmmmmmmmmmmmmmmm
   expiration: 600000
 
@@ -29,3 +29,8 @@ eureka:
 
 server:
   port: 8082
+
+logging:
+  level:
+    org.springframework.security: trace
+    com.example.auth: info
