--- a/user/src/main/resources/application.yaml
+++ b/user/src/main/resources/application.yaml
@@ -3,9 +3,9 @@ spring:
   elasticsearch:
     cluster-name:
     rest:
-      uris: http://localhost:9200
+      uri: http://localhost:9200
   datasource:
-    url: jdbc:mysql://localhost:3306/user?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+    url: jdbc:mysql://localhost:3306/user_blogs?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
     username: root
     password: 1234
   jpa:
@@ -19,12 +19,3 @@ token:
   secret: ssssssssssssssssssssssssssmmmmmmmmmmmmmmm
   expiration: 600000
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
-  instance:
-    prefer-ip-address: true
-    instance-id: ${spring.application.name}:${random.uui}
-server:
-  port: 8080
