--- a/post/src/main/resources/application.yaml
+++ b/post/src/main/resources/application.yaml
@@ -24,7 +24,7 @@ eureka:
       defaultZone: http://localhost:8761/eureka
   instance:
     prefer-ip-address: true
-    instance-id: ${spring.application.name}:${random.uuid}
+    instance-id: ${spring.application.name}:${random.uui}
 server:
   port: 8081
 
