--- a/user/src/main/resources/application.yaml
+++ b/user/src/main/resources/application.yaml
@@ -10,7 +10,7 @@ spring:
     password: 1234
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
   application:
     name: user
