UserBlog update 추가 완료 및 get 진행 중

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-HELP.md
+"4
+1\7"777777777717\
+1
+
+
+4
+7\\\\\\1147\5\\7545\574\\4\5747458744444HELP.md
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
