--- a/comment/src/main/resources/application.yaml
+++ b/comment/src/main/resources/application.yaml
@@ -13,7 +13,14 @@ spring:
     show-sql: true
   application:
     name: comment
-
+  kafka:
+    bootstrap-servers: 192.168.0.20:9092
+    producer:
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    consumer:
+      value-deserializer: org.apache.kafka.common.serialization.ByteArrayDeserializer
+      group-id: product
+      auto-offset-reset: earliest
 jwt:
   secret: ssssssssssssssssssssssssssmmmmmmmmmmmmmmm
   expiration: 600000
@@ -34,3 +41,7 @@ logging:
   level:
     org.springframework.security: trace
     com.example.auth: info
+
+kafka:
+  product:
+    name: comment-topic
