--- a/user/src/main/resources/application.yaml
+++ b/user/src/main/resources/application.yaml
@@ -14,7 +14,14 @@ spring:
     show-sql: true
   application:
     name: user
-
+  kafka:
+    bootstrap-servers: 192.168.0.20:9092
+    producer:
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    consumer:
+      value-deserializer: org.apache.kafka.common.serialization.ByteArrayDeserializer
+      group-id: product
+      auto-offset-reset: earliest
 jwt:
   secret: fdag32fdsavv32few89vbbafdsbaugubdsag8904fdsafdvcxcbre
   expiration: 600000
@@ -33,3 +40,6 @@ logging:
   level:
     org.springframework.security: trace
     com.example.auth: info
+kafka:
+  product:
+    name: user-topic
