--- a/comment/src/main/resources/application.yaml
+++ b/comment/src/main/resources/application.yaml
@@ -14,6 +14,15 @@ spring:
   application:
     name: comment
 
+  kafka:
+    bootstrap-servers: 192.168.0.12:9092
+    producer:
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    consumer:
+      value-deserializer: org.apache.kafka.common.serialization.ByteArrayDeserializer
+      group-id: comment
+      auto-offset-reset: earliest
+
 jwt:
   secret: ssssssssssssssssssssssssssmmmmmmmmmmmmmmm
   expiration: 600000
