--- a/post/src/main/resources/application.yaml
+++ b/post/src/main/resources/application.yaml
@@ -13,6 +13,18 @@ spring:
     show-sql: true
   application:
     name: post
+  kafka:
+    bootstrap-servers: 192.168.0.12:9092
+    producer:
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    consumer:
+      value-deserializer: org.apache.kafka.common.serialization.ByteArrayDeserializer
+      group-id: post
+      auto-offset-reset: earliest
+kafka:
+  product:
+    name: post-topic
+
 
 jwt:
   secret: ssssssssssssssssssssssssssmmmmmmmmmmmmmmm
