secret 유효시간 연장

--- a/comment/src/main/resources/application.yaml
+++ b/comment/src/main/resources/application.yaml
@@ -15,8 +15,8 @@ spring:
     name: comment
 
 jwt:
-  secret: ssssssssssssssssssssssssssmmmmmmmmmmmmmmm
-  expiration: 600000
+  secret: fdag32fdsavv32few89vbbafdsbaugubdsag8904fdsafdvcxcbre
+  expiration: 25920000
 
 
 eureka:
