--- a/post/src/main/resources/application.yaml
+++ b/post/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ spring:
     password: 1234
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     show-sql: true
   application:
     name: post
