--- a/post/src/main/resources/application.yaml
+++ b/post/src/main/resources/application.yaml
@@ -19,7 +19,8 @@ spring:
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
     consumer:
       value-deserializer: org.apache.kafka.common.serialization.ByteArrayDeserializer
-      group-id: post
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      group-id: user
       auto-offset-reset: earliest
 
 jwt:
@@ -34,7 +35,7 @@ eureka:
     prefer-ip-address: true
     instance-id: ${spring.application.name}:${random.uui}
 server:
-  port: 8081
+  port: 8088
 
 logging:
   level:
