--- a/comment/src/main/resources/application.yaml
+++ b/comment/src/main/resources/application.yaml
@@ -9,24 +9,14 @@ spring:
     password: 1234
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     show-sql: true
   application:
     name: comment
 
-  kafka:
-    bootstrap-servers: 192.168.0.20:9092
-    producer:
-      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
-    consumer:
-      value-deserializer: org.apache.kafka.common.serialization.ByteArrayDeserializer
-      group-id: comment
-      auto-offset-reset: earliest
-
-
 jwt:
-  secret: fdag32fdsavv32few89vbbafdsbaugubdsag8904fdsafdvcxcbre
-  expiration: 25920000
+  secret: ssssssssssssssssssssssssssmmmmmmmmmmmmmmm
+  expiration: 600000
 
 
 eureka:
